# frozen-duckdb

./: .actrc  .cursorrules  .gitignore  CONTEXT.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  build.rs  config.toml  demo-dependency-issue.sh  test_architecture.rs  test_ffi_validation.rs
.cargo/: config.toml
.github/workflows/: build-binaries.yml  ci-simple.yml  ci.yml  test-minimal.yml
crates/frozen-duckdb/: Cargo.toml
crates/frozen-duckdb-builder/: Cargo.toml
crates/frozen-duckdb-builder/src/: lib.rs
crates/frozen-duckdb-sys/: Cargo.toml  build.rs
crates/frozen-duckdb/examples/: basic_usage.rs  flock_ollama_integration.rs  performance_comparison.rs
crates/frozen-duckdb/src/: benchmark.rs  env_setup.rs  lib.rs  main.rs
crates/frozen-duckdb/src/cli/: commands.rs  flock_manager.rs  mod.rs
crates/frozen-duckdb/src/duckdb/: lib.rs
crates/frozen-duckdb/src/duckdb/core/: vector.rs
crates/frozen-duckdb/src/duckdb/types/: string.rs
crates/frozen-duckdb/src/duckdb/vscalar/: function.rs  mod.rs
crates/frozen-duckdb/src/duckdb/vtab/: arrow.rs
crates/frozen-duckdb/tests/: arrow_tests.rs  core_functionality_tests.rs  dropin_compatibility_tests.rs  parquet_tests.rs  polars_tests.rs  vss_tests.rs
datasets/: chinook.csv  chinook.parquet
docs/api/: cli.md  flock.md  library.md
docs/architecture/: binary-management.md  build-optimization.md  overview.md
docs/cli/: commands.md  dataset-operations.md  llm-operations.md
docs/contributing/: architecture-decisions.md  coding-standards.md  development-setup.md  testing-strategy.md
docs/guides/: dataset-management.md  integration.md  llm-setup.md  performance-tuning.md
docs/llm/: embeddings.md  flock-overview.md  ollama-setup.md  rag-pipelines.md  semantic-search.md  text-completion.md
docs/testing/: go-ffi-smoketest.md
examples/: basic_usage.rs  dropin_replacement.rs  performance_comparison.rs
prebuilt/: README.md  setup_env.sh
scripts/: Cargo.toml  README.md  README_gap_detection.md  bench_gate.sh  build_duckdb_optimized.sh  build_frozen_duckdb.sh  build_frozen_everything.sh  build_full_featured_duckdb.sh  build_go_smoketest.sh  build_static_duckdb.sh  check_workspace_deps.sh  ci_gate.sh  ci_gates.sh  create_arrow_cache.sh  create_frozen_setup.sh  create_precompiled_duckdb.sh  demo_ffi_validation.sh  docs_check.sh  download_duckdb_binaries.sh  duckdb_ffi.h  fake_guard.sh  ffi_constant_return_check.py  generate-changelog.sh  kcura-config.example.yaml  kcura-config.yaml  open_gaps.sh  precompile_deps.sh  redteam_probe.rs  release_checklist.sh  rg_sweep.sh  run_bench_suite.sh  run_ffi_validation.sh  scan_cli.sh  scan_cli_help.sh  scan_fakes.sh  scan_fakes_core_team.sh  setup_flock_ollama.sh  setup_optimized_build.sh  setup_workspace_caching.sh  smoke.py  (+15 more)
scripts/lib/: config.sh  intelligent_cache.sh  logging.sh  self_healing.sh
src/: architecture.rs  lib.rs  main.rs
src/cli/: commands.rs  dataset_manager.rs  flock_manager.rs
test-dependency/: Cargo.toml  README.md
test-dependency/src/: main.rs
test-validation/: Cargo.toml
test-validation/src/: main.rs
test_datasets/: customer.csv  orders.csv  part.csv  supplier.csv
tests/: flock_tests.rs  frozen_duckdb_tests.rs  tpch_integration_test.rs
