[package]
name = "frozen-duckdb"
version = "0.1.0"
edition = "2021"
description = "Pre-compiled DuckDB binary for fast Rust builds - Drop-in replacement for duckdb-rs"
license = "MIT"
repository = "https://github.com/seanchatmangpt/frozen-duckdb"
homepage = "https://github.com/seanchatmangpt/frozen-duckdb"
documentation = "https://github.com/seanchatmangpt/frozen-duckdb"
readme = "README.md"
keywords = [
  "duckdb",
  "database",
  "analytics",
  "performance",
  "build-optimization",
  "drop-in-replacement",
  "fast-builds",
]
categories = ["database", "development-tools", "performance"]

[[bin]]
name = "frozen-duckdb-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
# Internal duckdb dependency - will be replaced by frozen binary in build.rs
duckdb = { version = "1.4.0", default-features = false, features = [
  "json",
  "parquet",
  "appender-arrow",
] }
tempfile = "3"
reqwest = { version = "0.11", features = ["blocking"] }

[[example]]
name = "dropin_replacement"
path = "examples/dropin_replacement.rs"

[[example]]
name = "flock_ollama_integration"
path = "examples/flock_ollama_integration.rs"
