[workspace]
members = [
  "crates/frozen-duckdb",
  "crates/frozen-duckdb-builder",
  "crates/frozen-duckdb-sys",
  "test-validation",
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across all crates
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
reqwest = { version = "0.11", features = ["blocking"] }

# Build dependencies
tar = "0.4"
flate2 = "1.0"
zip = "0.6"

[workspace.package]
version = "1.4.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/seanchatmangpt/frozen-duckdb"
homepage = "https://github.com/seanchatmangpt/frozen-duckdb"
documentation = "https://github.com/seanchatmangpt/frozen-duckdb"
readme = "README.md"
keywords = ["duckdb", "database", "ffi"]
categories = ["database"]
